# HINAN

./: .clang-format  .gitignore  CMakeLists.txt  README.md  resources.qrc
assets/: template.txt
docs/: ARCHTECTURE.md
inc/: actions.h  components_manager.h  core.h  cpp_reader.h  port.h  port_manager.h  port_status_item.h  port_status_label.h  practice_kit.h  program_reader.h  program_reader_manager.h  setting_manager.h  update_checker.h
inc/components/: component_interface.h  led.h  segment.h  tact_switches.h  toggle_switches.h
inc/gui/: kit_main_ui.h  led.h  mainwindow.h  setting_widget.h
inc/icon/: icon.h
lang/: hinan_ja_JP.ts
src/: actions.cpp  components_manager.cpp  core.cpp  cpp_reader.cpp  main.cpp  port_manager.cpp  port_status_item.cpp  port_status_label.cpp  practice_kit.cpp  program_reader.cpp  program_reader_manager.cpp  setting_manager.cpp  update_checker.cpp
src/components/: led.cpp  segment.cpp  tact_switches.cpp  toggle_switches.cpp
src/gui/: kit_main_ui.cpp  led.cpp  mainwindow.cpp  setting_widget.cpp
test/: reader_test.c  script.as  tact_test.c  wrong.as
